PPL/refer/code_quan/.antlr/MCParser.py
# Generated from /Users/macbook/Downloads/code_quan/MC.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'int'", "'boolean'", 
                     "'float'", "'string'", "'void'", "'break'", "'continue'", 
                     "'if'", "'else'", "'for'", "'return'", "'while'", "'do'", 
                     "<INVALID>", "'true'", "'false'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "';'", "','", "'!'", "'/'", "'*'", "'%'", 
                     "'+'", "'-'", "'<'", "'<='", "'>'", "'>='", "'=='", 
                     "'!='", "'&&'", "'||'", "'='" ]

    symbolicNames = [ "<INVALID>", "BLOCKCMT", "LINECMT", "INTTYPE", "BOOLTYPE", 
                      "FLOATTYPE", "STRINGTYPE", "VOIDTYPE", "BREAK", "CONTINUE", 
                      "IF", "ELSE", "FOR", "RETURN", "WHILE", "DO", "BOOLLIT", 
                      "TRUE", "FALSE", "FLOATLIT", "INTLIT", "STRINGLIT", 
                      "ID", "LB", "RB", "LP", "RP", "LS", "RS", "SM", "CM", 
                      "OP_NEV", "OP_DIV", "OP_MUL", "OP_MOD", "OP_ADD", 
                      "OP_SUB", "OP_LT", "OP_LTE", "OP_GT", "OP_GTE", "OP_EQUAL", 
                      "OP_NEQUAL", "OP_AND", "OP_OR", "OP_ASSIGN", "WS", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_manydecls = 1
    RULE_mdTail = 2
    RULE_decl = 3
    RULE_varDecl = 4
    RULE_varList = 5
    RULE_variable = 6
    RULE_primitiveType = 7
    RULE_funcDecl = 8
    RULE_funcType = 9
    RULE_paraList = 10
    RULE_paralistTail = 11
    RULE_paraDecl = 12
    RULE_idParam = 13
    RULE_outputArrPointerType = 14
    RULE_blockStmt = 15
    RULE_blockStmtBody = 16
    RULE_declStmt = 17
    RULE_bodyStmt = 18
    RULE_stmt = 19
    RULE_ifStmt = 20
    RULE_ifmatch = 21
    RULE_stmtmatch = 22
    RULE_ifunmatch = 23
    RULE_stmtunmatch = 24
    RULE_otherStmt = 25
    RULE_dowhileStmt = 26
    RULE_forStmt = 27
    RULE_breakStmt = 28
    RULE_continueStmt = 29
    RULE_returnStmt = 30
    RULE_noExpReturn = 31
    RULE_normalExpReturn = 32
    RULE_expStmt = 33
    RULE_exp = 34
    RULE_term1 = 35
    RULE_term2 = 36
    RULE_term3 = 37
    RULE_term4 = 38
    RULE_term5 = 39
    RULE_term6 = 40
    RULE_term7 = 41
    RULE_term8 = 42
    RULE_exp9 = 43
    RULE_indexExp = 44
    RULE_indexFirstExp = 45
    RULE_funcCall = 46
    RULE_argList = 47
    RULE_argListTail = 48

    ruleNames =  [ "program", "manydecls", "mdTail", "decl", "varDecl", 
                   "varList", "variable", "primitiveType", "funcDecl", "funcType", 
                   "paraList", "paralistTail", "paraDecl", "idParam", "outputArrPointerType", 
                   "blockStmt", "blockStmtBody", "declStmt", "bodyStmt", 
                   "stmt", "ifStmt", "ifmatch", "stmtmatch", "ifunmatch", 
                   "stmtunmatch", "otherStmt", "dowhileStmt", "forStmt", 
                   "breakStmt", "continueStmt", "returnStmt", "noExpReturn", 
                   "normalExpReturn", "expStmt", "exp", "term1", "term2", 
                   "term3", "term4", "term5", "term6", "term7", "term8", 
                   "exp9", "indexExp", "indexFirstExp", "funcCall", "argList", 
                   "argListTail" ]

    EOF = Token.EOF
    BLOCKCMT=1
    LINECMT=2
    INTTYPE=3
    BOOLTYPE=4
    FLOATTYPE=5
    STRINGTYPE=6
    VOIDTYPE=7
    BREAK=8
    CONTINUE=9
    IF=10
    ELSE=11
    FOR=12
    RETURN=13
    WHILE=14
    DO=15
    BOOLLIT=16
    TRUE=17
    FALSE=18
    FLOATLIT=19
    INTLIT=20
    STRINGLIT=21
    ID=22
    LB=23
    RB=24
    LP=25
    RP=26
    LS=27
    RS=28
    SM=29
    CM=30
    OP_NEV=31
    OP_DIV=32
    OP_MUL=33
    OP_MOD=34
    OP_ADD=35
    OP_SUB=36
    OP_LT=37
    OP_LTE=38
    OP_GT=39
    OP_GTE=40
    OP_EQUAL=41
    OP_NEQUAL=42
    OP_AND=43
    OP_OR=44
    OP_ASSIGN=45
    WS=46
    UNCLOSE_STRING=47
    ILLEGAL_ESCAPE=48
    ERROR_CHAR=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manydecls(self):
            return self.getTypedRuleContext(MCParser.ManydeclsContext,0)


        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def getRuleIndex(self):
            return MCParser.RULE_program




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.manydecls()
            self.state = 99
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ManydeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MCParser.DeclContext,0)


        def mdTail(self):
            return self.getTypedRuleContext(MCParser.MdTailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_manydecls




    def manydecls(self):

        localctx = MCParser.ManydeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydecls)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.decl()
            self.state = 102
            self.mdTail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MdTailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MCParser.DeclContext,0)


        def mdTail(self):
            return self.getTypedRuleContext(MCParser.MdTailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_mdTail




    def mdTail(self):

        localctx = MCParser.MdTailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mdTail)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.INTTYPE, MCParser.BOOLTYPE, MCParser.FLOATTYPE, MCParser.STRINGTYPE, MCParser.VOIDTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.decl()
                self.state = 105
                self.mdTail()
                pass
            elif token in [MCParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(MCParser.VarDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(MCParser.FuncDeclContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_decl




    def decl(self):

        localctx = MCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.funcDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(MCParser.PrimitiveTypeContext,0)


        def varList(self):
            return self.getTypedRuleContext(MCParser.VarListContext,0)


        def SM(self):
            return self.getToken(MCParser.SM, 0)

        def getRuleIndex(self):
            return MCParser.RULE_varDecl




    def varDecl(self):

        localctx = MCParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.primitiveType()
            self.state = 115
            self.varList()
            self.state = 116
            self.match(MCParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VariableContext)
            else:
                return self.getTypedRuleContext(MCParser.VariableContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_varList




    def varList(self):

        localctx = MCParser.VarListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.variable()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.CM:
                self.state = 119
                self.match(MCParser.CM)
                self.state = 120
                self.variable()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_variable




    def variable(self):

        localctx = MCParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(MCParser.ID)
                self.state = 128
                self.match(MCParser.LS)
                self.state = 129
                self.match(MCParser.INTLIT)
                self.state = 130
                self.match(MCParser.RS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimitiveTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLTYPE(self):
            return self.getToken(MCParser.BOOLTYPE, 0)

        def INTTYPE(self):
            return self.getToken(MCParser.INTTYPE, 0)

        def FLOATTYPE(self):
            return self.getToken(MCParser.FLOATTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MCParser.STRINGTYPE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_primitiveType




    def primitiveType(self):

        localctx = MCParser.PrimitiveTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_primitiveType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.BOOLTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.STRINGTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcType(self):
            return self.getTypedRuleContext(MCParser.FuncTypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def paraList(self):
            return self.getTypedRuleContext(MCParser.ParaListContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(MCParser.BlockStmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_funcDecl




    def funcDecl(self):

        localctx = MCParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.funcType()
            self.state = 136
            self.match(MCParser.ID)
            self.state = 137
            self.match(MCParser.LB)
            self.state = 138
            self.paraList()
            self.state = 139
            self.match(MCParser.RB)
            self.state = 140
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(MCParser.PrimitiveTypeContext,0)


        def VOIDTYPE(self):
            return self.getToken(MCParser.VOIDTYPE, 0)

        def outputArrPointerType(self):
            return self.getTypedRuleContext(MCParser.OutputArrPointerTypeContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_funcType




    def funcType(self):

        localctx = MCParser.FuncTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcType)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.primitiveType()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(MCParser.VOIDTYPE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.outputArrPointerType()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParaListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paraDecl(self):
            return self.getTypedRuleContext(MCParser.ParaDeclContext,0)


        def paralistTail(self):
            return self.getTypedRuleContext(MCParser.ParalistTailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_paraList




    def paraList(self):

        localctx = MCParser.ParaListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paraList)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.INTTYPE, MCParser.BOOLTYPE, MCParser.FLOATTYPE, MCParser.STRINGTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.paraDecl()
                self.state = 148
                self.paralistTail()
                pass
            elif token in [MCParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParalistTailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MCParser.CM, 0)

        def paraDecl(self):
            return self.getTypedRuleContext(MCParser.ParaDeclContext,0)


        def paralistTail(self):
            return self.getTypedRuleContext(MCParser.ParalistTailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_paralistTail




    def paralistTail(self):

        localctx = MCParser.ParalistTailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paralistTail)
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(MCParser.CM)
                self.state = 154
                self.paraDecl()
                self.state = 155
                self.paralistTail()
                pass
            elif token in [MCParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParaDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(MCParser.PrimitiveTypeContext,0)


        def idParam(self):
            return self.getTypedRuleContext(MCParser.IdParamContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_paraDecl




    def paraDecl(self):

        localctx = MCParser.ParaDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_paraDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.primitiveType()
            self.state = 161
            self.idParam()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_idParam




    def idParam(self):

        localctx = MCParser.IdParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_idParam)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(MCParser.ID)
                self.state = 165
                self.match(MCParser.LS)
                self.state = 166
                self.match(MCParser.RS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OutputArrPointerTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(MCParser.PrimitiveTypeContext,0)


        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_outputArrPointerType




    def outputArrPointerType(self):

        localctx = MCParser.OutputArrPointerTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_outputArrPointerType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.primitiveType()
            self.state = 170
            self.match(MCParser.LS)
            self.state = 171
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)
